Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91764

[REG 5.15.2->5.15.3]: When specifing a letterSpacing for the default font, it will end up displaying incorrect characters

    XMLWordPrintable

Details

    • macOS
    • 107d14825ae7a4f3ca2a99724bbb8a1d5c13b399 (qt/tqtc-qtbase/tqtc/lts-5.15)

    Description

      When specifing a letterSpacing for the default font, it will end up displaying incorrect characters. If a font (other than the default) is specified then it works fine. This appears to have been introduced with 6d306a0e3755258beb11d7f488c2bb1bf66bec19

      Attachments

        For Gerrit Dashboard: QTBUG-91764
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes