src/3rdparty/harfbuzz-ng/harfbuzz-ng.pro
@@ -169,7 +169,7 @@ contains(SHAPERS, coretext) {
     DEFINES += HAVE_CORETEXT
 
     SOURCES += \
-        $$PWD/src/hb-coretext.cc
+        $$PWD/src/hb-coretext.mm
 
     HEADERS += \
         $$PWD/src/hb-coretext.h
